Refactoring the initial structure.

--- a/UnderTheCork/UnderTheCork.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/UnderTheCork/UnderTheCork.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model UnderTheCork.Web.Models.ExternalLoginConfirmationViewModel
+﻿@model UnderTheCork.Web.Models.AccountViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
