--- a/UnderTheCork/UnderTheCork.Web/Views/Account/ForgotPassword.cshtml
+++ b/UnderTheCork/UnderTheCork.Web/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model UnderTheCork.Web.Models.ForgotPasswordViewModel
+﻿@model UnderTheCork.Web.Models.AccountViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
