--- a/UnderTheCork/UnderTheCork.Web/Views/Account/Login.cshtml
+++ b/UnderTheCork/UnderTheCork.Web/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@using UnderTheCork.Web.Models
+﻿@using UnderTheCork.Web.Models.AccountViewModels
 @model LoginViewModel
 @{
     ViewBag.Title = "Log in";
