--- a/UnderTheCork/UnderTheCork.Web/Views/Account/Register.cshtml
+++ b/UnderTheCork/UnderTheCork.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model UnderTheCork.Web.Models.RegisterViewModel
+﻿@model UnderTheCork.Web.Models.AccountViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
