--- a/UnderTheCork/UnderTheCork.Web/Views/Account/ResetPassword.cshtml
+++ b/UnderTheCork/UnderTheCork.Web/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model UnderTheCork.Web.Models.ResetPasswordViewModel
+﻿@model UnderTheCork.Web.Models.AccountViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
