--- a/UnderTheCork/UnderTheCork.Web/Views/Account/SendCode.cshtml
+++ b/UnderTheCork/UnderTheCork.Web/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model UnderTheCork.Web.Models.SendCodeViewModel
+﻿@model UnderTheCork.Web.Models.AccountViewModels.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
