--- a/UnderTheCork/UnderTheCork.Web/Views/Account/VerifyCode.cshtml
+++ b/UnderTheCork/UnderTheCork.Web/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model UnderTheCork.Web.Models.VerifyCodeViewModel
+﻿@model UnderTheCork.Web.Models.AccountViewModels.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
