--- a/UnderTheCork/UnderTheCork.Web/Views/Manage/AddPhoneNumber.cshtml
+++ b/UnderTheCork/UnderTheCork.Web/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model UnderTheCork.Web.Models.AddPhoneNumberViewModel
+﻿@model UnderTheCork.Web.Models.ManageViewModels.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
