--- a/UnderTheCork/UnderTheCork.Web/Views/Manage/SetPassword.cshtml
+++ b/UnderTheCork/UnderTheCork.Web/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model UnderTheCork.Web.Models.SetPasswordViewModel
+﻿@model UnderTheCork.Web.Models.ManageViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
