--- a/UnderTheCork/UnderTheCork.Web/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/UnderTheCork/UnderTheCork.Web/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model UnderTheCork.Web.Models.VerifyPhoneNumberViewModel
+﻿@model UnderTheCork.Web.Models.ManageViewModels.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
