--- a/UnderTheCork/UnderTheCork.Web/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/UnderTheCork/UnderTheCork.Web/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model UnderTheCork.Web.Models.ExternalLoginListViewModel
+﻿@model UnderTheCork.Web.Models.AccountViewModels.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
