--- a/UnderTheCork/UnderTheCork.Web/Views/Manage/ChangePassword.cshtml
+++ b/UnderTheCork/UnderTheCork.Web/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model UnderTheCork.Web.Models.ChangePasswordViewModel
+﻿@model UnderTheCork.Web.Models.ManageViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
