--- a/UnderTheCork/UnderTheCork.Web/Views/Manage/Index.cshtml
+++ b/UnderTheCork/UnderTheCork.Web/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model UnderTheCork.Web.Models.IndexViewModel
+﻿@model UnderTheCork.Web.Models.ManageViewModels.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
