--- a/UnderTheCork/UnderTheCork.Web/Views/Manage/ManageLogins.cshtml
+++ b/UnderTheCork/UnderTheCork.Web/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model UnderTheCork.Web.Models.ManageLoginsViewModel
+﻿@model UnderTheCork.Web.Models.ManageViewModels.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
